# graph-data-science-client

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TESTING.md  bar  changelog.md  constructing-cora.py  foo  gds-api-spec.json  hmmnotgood  justfile  ml_pipelines_node_classification.ipynb  mypy.ini  pyproject.toml  run_notebooks  setup.py  test.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-deploy-surge.yml  docs-pr-checks.yml  docs-teardown.yml
benchmarks/: aura_benchmark.ipynb  credentials.env.template
changelog/: 0.0.9.md  0.1.0.md  0.1.1.md  1.0.1.md  1.1.0.md  1.2.0.md  1.3.0.md  1.3.md
changelog/archive/: 0.1.0.md  1.0.0.md  1.2.0.md
doc/: README.md  antora.yml  package.json  preview.yml  publish.yml
doc/sphinx/: Makefile  README.adoc  algorithms-conf.json  algorithms.json  create_algorithms_rst.py
doc/tests/: .rubocop.yml  Gemfile  check_client_only_endpoints.py  test_client_only_endpoints.py  test_docs.rb
examples/: FastPathExamples.ipynb  README.adoc  README.md  aga-standalone-bq-spark.ipynb  aura-only-features.ipynb  centrality-algorithms.ipynb  community-detection.ipynb  cora-sample.html  fastpath-example.py  fastpath-medical-dataset.ipynb  fastrp-and-knn.ipynb  gds-sessions-self-managed.ipynb  gds-sessions.ipynb  graph-analytics-serveless.ipynb  graph-analytics-serverless-ml-models.ipynb  graph-analytics-serverless-self-managed.ipynb  graph-analytics-serverless-spark.ipynb  graph-analytics-serverless-standalone-fastpath.ipynb  graph-analytics-serverless-standalone.ipynb  graph-analytics-serverless.ipynb  heterogeneous-node-classification-with-hashgnn.ipynb  import-sample-export-gnn.ipynb  kge-distmult-nations-field.ipynb  kge-distmult-nations.ipynb  kge-distmult-nations.py  kge-distmult.ipynb  kge-distmult.py  kge-predict-transe-no-input-tensor.ipynb  kge-predict-transe-pyg-train.ipynb  kge-predict-transe.ipynb  kge-transe-construct.ipynb  kge-transe.ipynb  load-data-via-graph-construction.ipynb  ml-pipelines-node-classification.ipynb  node-regression-with-subgraph-and-graph-sample.ipynb  python-runtime-V1.ipynb  python-runtime.ipynb  sessions.env.template  visualize-with-pyvis.ipynb  visualize.ipynb
examples/dev/: aura-only-features.ipynb  gds-sessions.ipynb
gdsclient/: __init__.py  algo_proc_builder.py  algo_proc_runner.py  call_builder.py  direct_endpoints.py  graph.py  graph_data_science.py  graph_proc.py  graphproc.py  indirect_endpoints.py  query_runner.py
gdsclient/algo/: algo_endpoints.py  algo_proc_runner.py  match_proc_runner.py
gdsclient/error/: illegal_attr_checker.py
gdsclient/graph/: graph.py  graph_create_runner.py  graph_endpoints.py  graph_export_runner.py  graph_object.py  graph_proc_runner.py  graph_project_runner.py
gdsclient/model/: graphsage_model.py  model.py  model_endpoints.py  model_proc_runner.py  trained_model.py
gdsclient/pipeline/: lp_pipeline.py  lp_pipeline_create_runner.py  lp_prediction_pipeline.py  lp_trained_pipeline.py  lp_training_pipeline.py  nc_pipeline.py  nc_pipeline_create_runner.py  nc_prediction_pipeline.py  nc_trained_pipeline.py  nc_training_pipeline.py  pipeline.py  pipeline_endpoints.py  prediction_pipeline.py  trained_pipeline.py  training_pipeline.py
gdsclient/query_runner/: neo4j_query_runner.py  query_runner.py
gdsclient/similarity/: similarity_algo_runner.py  similarity_endpoints.py
gdsclient/system/: system_endpoints.py
gdsclient/tests/: __init__.py  conftest.py  pytest.ini  test_graph_create.py  test_simple_algo.py
gdsclient/topological_lp/: topological_lp_endpoints.py  topological_lp_runner.py
gdsclient/utils/: util_endpoints.py  util_proc_runner.py
gdsclient/validation/: validation.py
graphdatascience/: __init__.py  alpha_endpoints.py  aura_api.py  aura_graph_data_science.py  aura_sessions.py  beta_endpoints.py  call_builder.py  call_parameters.py  caller_base.py  direct_endpoints.py  endpoints.py  graph_data_science.py  ignored_server_endpoints.py  indirect_endpoints.py  plugin_v2_endpoints.py  server_version.py  version.py
graphdatascience/algo/: algo_endpoints.py  algo_proc_runner.py  single_mode_algo_endpoints.py
graphdatascience/arrow_client/: arrow_base_model.py  arrow_info.py  authenticated_arrow_client.py  authenticated_flight_client.py  data_mapper.py  error_handler.py  job_id.py  job_status.py
graphdatascience/error/: client_only_endpoint.py  cypher_warning_handler.py  deprecation_warning.py  endpoint_suggester.py  illegal_attr_checker.py  local_only_endpoint.py  uncallable_namespace.py
graphdatascience/gds_session/: __init__.py  aura_api.py  aura_graph_data_science.py  aura_sessions.py  cloud_location_resolver.py  gds_session.py  gds_sessions.py  region_suggester.py  schema.py  session_sizes.py
graphdatascience/gnn/: gnn_endpoints.py  gnn_nc_runner.py
graphdatascience/graph/: base_graph_proc_runner.py  cypher_graph_backend.py  graph_alpha_proc_runner.py  graph_alpha_project_runner.py  graph_backend.py  graph_beta_proc_runner.py  graph_create_result.py  graph_cypher_runner.py  graph_endpoints.py  graph_entity_ops_runner.py  graph_export_runner.py  graph_object.py  graph_ops_runner.py  graph_proc_runner.py  graph_project_runner.py  graph_remote_proc_runner.py  graph_remote_project_runner.py  graph_result.py  graph_sample_runner.py  graph_type_check.py  nx_loader.py  ogb_loader.py
requirements/: base.txt  dev.txt  notebook-ci.txt  tests.txt
scripts/: benchmark_graph_construct.py  checkstyle  clean_notebooks.py  deploy  generate_algo_endpoints.py  host_api_docs.py  makestyle  pre_release  render_api_docs  render_docs.sh  run_notebooks  run_notebooks.py
tests/: conftest.py  pytest.ini  test.env.template
(+1850 files in other folders)
